finish styling information menu:

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                         <div>
                             OBPM, DBPM, BPM, 3PAR, Tot Min
                         </div>
+                        <br />
                         <div>
                             <div>Offensive Box Plus Minus, Defensive Box Plus Minus,</div>
                             <div>Box Plus Minus, Three-Point Attempt Rate, Total Minutes</div>
@@ -244,7 +245,7 @@
             <a class="footer-links" href="http://johnbaek.life" target="_blank">John Baek</a>
         </div>
         <div>
-            <a href="https://www.linkedin.com/in/john-baek92/" target="_blank">
+            <a href="https://www.linkedin.com/in/john-baek92" target="_blank" class="footer-links">
                 <img class="footer-links" src="linkedIN.png" />
             </a>
             <a href="https://www.github.com/johnbaek92" target="_blank">
