clicking link in information will open a new tab

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <hr />
                 <div>
                     For details on computation of these stats, please visit
-                    <a class="footer-links" href="http://www.basketball-reference.com/about/glossary.html">
+                    <a class="footer-links" href="http://www.basketball-reference.com/about/glossary.html" target="_blank">
                         Basketball-Reference
                     </a>
                 </div>
