clarify when data was last scraped

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
             <a class="footer-links" href="https://www.basketball-reference.com" target="_blank">Basketball-Reference</a>
         </div>
         <div>
-            Last Updated 3/11/2018
+            Stats Last Updated 3/11/2018
         </div>
         <div>
             Created By
