update file structure

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="masterCSS.css">
-    <link rel="shortcut icon" type="image/png" href="favicon.png" />
+    <link rel="shortcut icon" type="image/png" href="images/favicon.png" />
     <link href="https://fonts.googleapis.com/css?family=Bowlby+One+SC" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Patua+One" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Francois+One" rel="stylesheet">
@@ -246,10 +246,10 @@
         </div>
         <div>
             <a href="https://www.linkedin.com/in/john-baek92" target="_blank" class="footer-links">
-                <img class="footer-links" src="linkedIN.png" />
+                <img class="footer-links" src="images/linkedIN.png" />
             </a>
             <a href="https://www.github.com/johnbaek92" target="_blank">
-                <img class="footer-links" src="github.png" />
+                <img class="footer-links" src="images/github.png" />
             </a>
         </div>
     </footer>
